tests/semantic_errors/test24_3.tl
require "ifj21"

function main()
    a = func()
end

main()
